--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 <td><span id="draws">0</span></td>
             </tr>
         </table>
+        <strong>Tips: Get max out of 21 but not over</strong>
+        <span>'Hit' to start your term</span>
+        <span>'Stand' to start computer term</span>
+        <span>'Deal' to confirm result and start again</span>
     </div>
 </div>
 <script src="base.js"></script>
